kernel/tests/invalid_data_declarations/non_strictly_positive_2.ck
data SomeTy : Prop -> Prop where

data Invalid : Prop where
  | c : SomeTy Invalid -> Invalid